Feb-15-2000 - Kurt Granroth (v1.0.4)
  o Create a "real" factory for the KPart plugins instead of using a
    generic one
  o Use 'find' instead of 'ls' for listing files.  Works better on
    FreeBSD.  Thanks to Jonathan Belson <jon@witchspace.com> for the
    heads up.
  o Fixed command line args and module selection code.  Thanks to
    David Jarvie <djarvie@lineone.net> for the fix.

Feb-04-2000 - Kurt Granroth (v1.0.3)
  o Converted App::load method to use KURL instead of QString in kapp
    module
  o Added +[URL] command line option in kapp module

Feb-04-2000 - Simon Hausman (v1.0.2)
  o Converted App::load method to use KURL instead of QString in kpart
    module
  o Used correct constructor for Part in kpart module
  o Used correct instance() in kpart module
  o Other random correctness fixes in kpart module
  o Added +[URL] command line option in kpart module

Feb-04-2000 - Simon Hausman (v1.0.1)
  o Fixed memory leak in plugin module
  o Use createObject instead of old create in plugin module
  o Added version number to xml file in plugin module
  o Fixed integration of configure.in.in in kdesdk

Feb-04-2000 - Kurt Granroth (v1.0)
  o GIGANTIC REWRITE.  This was *almost* a complete rewrite from
    scratch
  o Made entire system much more modular allowing for future
    frameworks to be easily added
  o Added module to create a full KParts application
  o Added module to create a KPart plugin
  o Added module to create an autoconf/automake framework for existing
    source code
  o Added more command-line options to speed up creation of projects
  o Dropped knewclass and knewfunction as they were next to useless

Dec-10-2000 - Kurt Granroth (v0.7.5)
  o Finally fixed --noinit for real
  o kapptemplate no longer needs to be in your $PATH

Nov-20-2000 - Kurt Granroth (v0.7.4)
  o Added custom menu item and menu as example on how to do it
  o Fixed some --noinit bugs

Oct-27-2000 - Stephan Kulow (v0.7.3)