@@ -1,6 +1,6 @@
 #!/bin/sh
 
-KAPPTEMPLATEVERSION=1.0.4
+KAPPTEMPLATEVERSION=1.0.5
 
 # horrid hack to try and figure out what shell we are using
 # basically, if we can find /usr/ucb/echo, then we are almost for sure
